Improve rotation and test